--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,47 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+:root.theme-light {
+  --main-font: 'Inter', sans-serif;
+  --main-font-weight: normal;
+  --accent-font: 'PressStart2P', sans-serif;
+  --background-color: #ffffff;
+  --accent-color: #000000;
+  --background-image: 
+    repeating-linear-gradient(to right, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
+    repeating-linear-gradient(to bottom, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
+    linear-gradient(to bottom, #e7e7e7, #1a1a1a 99.99%);
+  --button-like-color: #fff;
+  --contour-color: #000000;
+  --filling-color: #FF0000;
+}
+
+:root.theme-dark {
+  --main-font: 'Inter', sans-serif;
+  --main-font-weight: 465;
+  --accent-font: 'PressStart2P', sans-serif;
+  --background-color: #000000;
+  --accent-color: #00cc14;
+  --background-image: 
+    repeating-linear-gradient(to right, #000, #000 2px, transparent 2px, transparent 4px),
+    repeating-linear-gradient(to bottom, #000, #000 2px, transparent 2px, transparent 4px),
+    linear-gradient(to bottom, #007f0c, #004306);
+  --button-like-color: #00cc14;
+  --contour-color: #00cc14;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --main-font: 'Inter', sans-serif;
+    --main-font-weight: 465;
+    --accent-font: 'PressStart2P', sans-serif;
+    --background-color: #000000;
+    --accent-color: #00cc14;
+    --background-image: 
+      repeating-linear-gradient(to right, #000, #000 2px, transparent 2px, transparent 4px),
+      repeating-linear-gradient(to bottom, #000, #000 2px, transparent 2px, transparent 4px),
+      linear-gradient(to bottom, #007f0c, #004306);
+    --button-like-color: #00cc14;
+    --contour-color: #00cc14;
+  }
+}
