--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,440 @@
 */
 
 .page {
+  color: var(--accent-color);
+  font-family: var(--main-font);
+  background-color: var(--background-color);
+  background-image: var(--background-image);
+  background-size: cover;
+  background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+}
+
+.header {
+  display: grid;
+  margin-inline: auto;
+  margin-block: 100px;
+  border: 2px solid var(--accent-color);
+  background-color: var(--background-color);
+}
+
+.header__title {
+  padding-block-start: 120px;
+  font-family: var(--accent-font);
+  font-size: var(--header-title-size);
+  line-height: var(--header-title-line-height);
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.header__text {
+  padding-block-start: 20px;
+  font-family: var(--accent-font);
+  font-size: var(--header-text-size);
+  line-height: var(--header-text-line-height);
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.theme-menu {
+  justify-self: center;
+  padding-inline-start: 20px;
+  padding-block-start: 25px;
+  padding-block-end: 20px;
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.theme-menu__button {
+  border: none;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  line-height: 14px;
+  text-transform: uppercase;
+  background: none;
+  position: relative;
+  padding: 0;
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+  pointer-events: none;
+}
+
+.theme-menu__button:disabled::before {
+  content: '▶';
+  position: absolute;
+  top: 2;
+  left: -16px;
+  width: 14px;
+  height: 14px;
+  animation: header-button-animation 0.5s ease-in-out infinite alternate;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+  cursor: pointer;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button::after {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--accent-color);
+  transition: transform 0.3s ease;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+
+.theme-menu__button:focus-visible::after {
+  transform: scaleX(1);
+}
+
+.card-list {
+  display: grid;
+  gap: 50px;
+  margin-inline: auto;
+  margin-block-end: 52px;
+}
+
+.card-list__item {
+  background-color: var(--background-color);
+}
+
+.card {
+  display: grid;
+  border: 2px solid var(--accent-color);
+}
+
+.card__header {
+  border-block-end: 2px solid var(--accent-color);
+  padding-inline: 11px;
+  padding-block: 4px;
+  font-family: var(--main-font);
+  font-size: 18px;
+  line-height: 22px;
+}
+
+.card__container {
+  position: relative;
+  max-block-size: 371px;
+}
+
+.card__img {
+  position: relative;
+  inline-size: 100%;
+  block-size: 371px;
+  background-size: cover;
+}
+
+.card__img-filter-brightness {
+  filter: brightness(75%);
+}
+
+.card__img-filter-contrast {
+  filter: contrast(90%);
+}
+
+.card__img-filter-hue-rotate {
+  filter: hue-rotate(90deg);
+}
+
+.card__img-filter-blur {
+  filter: blur(0.05rem);
+}
+
+.card__img-filter-opacity {
+  filter: opacity(0.5);
+}
+
+.card__img-filter-saturate {
+  filter: saturate(200%);
+}
+
+.card__img-filter-grayscale {
+  filter: grayscale(1);
+}
+
+.card__img-multiple-filter {
+  filter: saturate(200%) contrast(120%);
+}
+
+.card__label {
+  position: absolute;
+  top: 23px;
+  right: 12px;
+  opacity: 0.6;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  line-height: 14px;
+  /* text-transform: uppercase; */
+  text-shadow: 0 0 1px var(--background-color),
+    0 0 2px var(--background-color), 0 0 3px var(--background-color);
+  mix-blend-mode: hard-light;
+}
+
+.card__text-container {
+  display: grid;
+  gap: 27px;
+  border-block-start: 2px solid var(--accent-color);
+  padding-inline: 25px;
+  padding-block: 25px;
+}
+
+.card__text {
+  font-family: var(--main-font);
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.card__buttons {
+  display: flex;
+  gap: 5px;
+  justify-content: end;
+  margin-block-end: 25px;
+  padding-inline-end: 25px;
+  block-size: 38px;
+}
+
+.card__icon-button {
+  background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  border: 2px solid transparent;
+  padding: 0;
+  cursor: pointer;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--accent-color);
+  transition: 0.3s ease;
+}
+
+.card__like-button {
+  position: relative;
+  border: 2px solid var(--accent-color);
+  background: transparent;
+  cursor: pointer;
+  inline-size: 130px;
+}
+
+.card__like-button:focus {
+  outline: none;
+}
+
+.card__like-button:focus-visible {
+  box-shadow: 2px 2px 0 0 var(--accent-color);
+  transition: 0.3s ease;
+}
+
+.card__like-button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: var(--accent-color);
+  transition: transform 0.5s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left;
+  inline-size: 100%;
+  block-size: 100%;
+}
+
+.card__like-button:hover::before {
+  transform: scaleX(1);
+}
+
+.button__text {
+  position: relative;
+  align-self: center;
+  mix-blend-mode: difference;
+  font-family: var(--accent-font);
+  color: var(--button-like-color);
+  font-size: 14px;
+  line-height: 90%;
+}
+
+.save__button-container {
+  display: flex;
+  justify-content: center;
+  margin-block-end: 100px;
+}
+
+.save__button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  inline-size: 306px;
+  block-size: 80px;
+  background-color: var(--background-color);
+  position: relative;
+  border: 2px solid var(--accent-color);
+  cursor: pointer;
+}
+
+.save__button svg {
+  mix-blend-mode: difference;
+  color: var(--button-like-color);
+  inline-size: 28px;
+  block-size: 28px;
+}
+
+.save__button:focus {
+  outline: none;
+}
+
+.save__button:focus-visible {
+  box-shadow: 2px 2px 0 0 var(--accent-color);
+  transition: 0.3s ease;
+}
+
+.save__button::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: var(--accent-color);
+  transition: transform 0.5s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left;
+  inline-size: 100%;
+  block-size: 100%;
+}
+
+.save__button:hover::before {
+  transform: scaleX(1);
+}
+
+.save__dialog {
+  inline-size: 341px;
+  block-size: 191px;
+  background-color: var(--background-color);
+  color: var(--accent-color);
+  padding: 0;
+  position: fixed;
+  inset: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+dialog:not([open]) {
+  pointer-events: none;
+  opacity: 0;
+}
+
+.save__dialog::backdrop {
+  background: #000000;
+  opacity: 0.75;
+}
+
+.dialog__container {
+  display: grid;
+  grid-template-columns: 1fr 198px;
+  gap: 20px;
+  padding-inline: 42px;
+  padding-block: 30px;
+}
+
+.dialog__floppy {
+  align-self: center;
+}
+
+.dialog__text {
+  font-family: var(--accent-font);
+  font-size: 14px;
+  line-height: 150%;
+  text-transform: uppercase;
+}
+
+.dialog__close-button {
+  margin-inline-start: 42px;
+  inline-size: 257px;
+  block-size: 38px;
+  background: transparent;
+  border: 2px solid var(--accent-color);
+  font-family: var(--accent-font);
+  font-size: 14px;
+  line-height: 90%;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+
+@media (width > 375px) {
+  .header {
+    max-inline-size: 700px;
+    min-block-size: 368px;
+  }
+
+  .header__title {
+    padding-block-start: 136px;
+  }
+
+  .card-list {
+    max-inline-size: 696px;
+    margin-block-end: 50px;
+  }
+
+  .card__container {
+    max-block-size: 696px;
+  }
+
+  .card__img {
+    block-size: 696px;
+  }
+
+  .card__label {
+    right: 25px;
+    top: 25px;
+  }
+
+  .save__button-container {
+    margin-block-end: 103px;
+  }
+
+  .save__button {
+    flex-direction: row;
+    inline-size: 335px;
+    block-size: 55px;
+  }
+
+  .save__button svg {
+    inline-size: 21px;
+    block-size: 21px;
+  }
+
+  .save__dialog {
+    inline-size: 353px;
+    block-size: 191px;
+  }
+
+  .dialog__container {
+    padding-inline: 30px;
+    grid-template-columns: 1fr 234px;
+  }
+
+  .dialog__close-button {
+    inline-size: 293px;
+    margin-inline-start: 30px;
+  }
 }
