--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,20 @@
-/* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+/* В этом файле будут храниться все значения переменных в исходном 
+состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --main-font: 'Inter', sans-serif;
+  --main-font-weight: normal;
+  --accent-font: 'PressStart2P', sans-serif;
+  --header-title-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  --header-title-line-height: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  --header-text-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  --header-text-line-height: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  --background-color: #ffffff;
+  --accent-color: #000000;
+  --background-image: 
+    repeating-linear-gradient(to right, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
+    repeating-linear-gradient(to bottom, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
+    linear-gradient(to bottom, #e7e7e7, #1a1a1a 99.99%);
+  --button-like-color: #fff;
+  --contour-color: #000000;
+  --filling-color: #FF0000;
+}
