--- a/styles/themes.css
+++ b/styles/themes.css
@@ -6,8 +6,10 @@
 */
 :root.theme-light {
   --main-font: 'Inter', sans-serif;
-  --main-font-weight: normal;
-  --accent-font: 'PressStart2P', sans-serif;
+  --wght-text: 400;
+  --wght-title: 700;
+  --accent-font: 'PressStart2P', monospace;
+  --acccent-wght: 400;
   --background-color: #ffffff;
   --accent-color: #000000;
   --background-image: 
@@ -21,8 +23,10 @@
 
 :root.theme-dark {
   --main-font: 'Inter', sans-serif;
-  --main-font-weight: 465;
-  --accent-font: 'PressStart2P', sans-serif;
+  --wght-text: 465;
+  --wght-title: 785;
+  --accent-font: 'PressStart2P', monospace;
+  --acccent-wght: 400;
   --background-color: #000000;
   --accent-color: #00cc14;
   --background-image: 
@@ -36,8 +40,10 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --main-font: 'Inter', sans-serif;
-    --main-font-weight: 465;
-    --accent-font: 'PressStart2P', sans-serif;
+    --wght-text: 465;
+    --wght-title: 785;
+    --accent-font: 'PressStart2P', monospace;
+    --acccent-wght: 400;
     --background-color: #000000;
     --accent-color: #00cc14;
     --background-image: 
