--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,8 +2,10 @@
 состоянии, а так же их изменения в зависимости от ширины устройства */
 :root {
   --main-font: 'Inter', sans-serif;
-  --main-font-weight: normal;
-  --accent-font: 'PressStart2P', sans-serif;
+  --wght-text: 400;
+  --wght-title: 700;
+  --accent-font: 'PressStart2P', monospace;
+  --acccent-wght: 400;
   --header-title-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   --header-title-line-height: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   --header-text-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
